# TheSign

./: .gitignore  README.md
code/: Makefile  code.py  pyproject.toml
code/the_sign/: __init__.py  color.py  sequence.py  sign.py  test_sequence.py
code/the_sign/animations/: __init__.py  blink.py  columns.py  confetti.py  cube.py  heart.py  innovation_norge.py  knight_rider.py  rainbow_cycle.py  rainbow_shimmer.py  rainbow_sparkle.py  rainbow_spin.py  shimmer.py  smile.py  snake.py  sparkle.py  static.py  test.py
code/the_sign/images/: __init__.py
code/the_sign/simulator/: __main__.py  sim.py
scad/: layout.scad
stl/: Dot.stl
wifi/: qr-code.scad
