[tool.poetry]
name = "the_sign"
version = "0.1.0"
description = ""
authors = ["Jonathan Camp <me@jonathan.camp>"]
#readme = "README.md"
packages = [{include = "the_sign", from = "."}]

[tool.poetry.dependencies]
python = "^3.11"
circuitpython-stubs = "^9.2.3"
adafruit-circuitpython-neopxl8 = "^0.3.3"
adafruit-circuitpython-asyncio = "^1.3.4"
adafruit-circuitpython-fancyled = "^1.4.22"
bitops = "^0.0.5"
adafruit-circuitpython-pioasm = "^1.3.1"
adafruit-circuitpython-led-animation = "^2.11.1"
adafruit-circuitpython-typing = "^1.11.2"
rainbowio = "^0.0.1"
pygame = "^2.6.1"


[tool.poetry.group.dev.dependencies]
black = "^24.10.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
